# panoproc

./: .gitignore  README.md  abc.json  pyproject.toml
panoproc/: index.html  panoproc.py
panoproc/pannellum/: libpannellum.js  pannellum.htm  pannellum.js
panoproc/static/: add_hotspot.js  map.js  styles.css  submit.js
panoproc/static/pannellum/: pannellum.js
panoproc/templates/: index.html
