[tool.poetry]
name = "panoproc"
version = "0.1.0"
description = ""
authors = ["lachlanshoesmith <12870244+lachlanshoesmith@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
mozjpeg-lossless-optimization = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
